--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -6,6 +6,7 @@
 #  body       :text
 #  created_at :datetime
 #  updated_at :datetime
+#  user_id    :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
